--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "travelapp",
+    "name": "TravelApp",
     "slug": "travelapp",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -17,9 +17,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.sudharsanr.travelapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
